# vggt-omega

./: .gitignore  .gitmodules  README.md  distributed_inference.py  inference.py  pyproject.toml  requirements.txt  train.py
vggt_omega/datasets/: base_dataset.py  composed_dataset.py  dataset_util.py  dynamic_dataloader.py  modality.py  parallel_loader.py  track_util.py
vggt_omega/datasets/adapters/: __init__.py  __main__.py  rerun_adapter.py
vggt_omega/datasets/config/: arkitscenes.yaml  blendedmvs.yaml  bonn.yaml  co3d.yaml  default.yaml  default_dataset.yaml  dl3dv.yaml  dynamic_replica.yaml  hypersim.yaml  kitti.yaml  megadepth.yaml  mvs_synth.yaml  neu3d.yaml  neural_rgbd.yaml  nyu.yaml  omniobject3d.yaml  pointodyssey.yaml  scannet.yaml  seven_scenes.yaml  sintel.yaml  spring.yaml  tartanair.yaml  tum.yaml  vkitti.yaml  waymo.yaml  wildrgbd.yaml
vggt_omega/datasets/tests/: test_arkitscenes_dataset.py  test_blendedmvs_dataset.py  test_common.py  (+29 more)
vggt_omega/distributed/: __init__.py  aggregator.py  attention.py  block.py  camera_head.py  eval_reduce.py  model.py  parallel_context.py  process_group.py  shard.py  ulysses.py
vggt_omega/evaluates/: __init__.py  base_metric.py  camera_pose.py  mono_depth.py  pointcloud.py
vggt_omega/losses/: __init__.py  camera_loss.py  depth_loss.py  matching.py  normalization.py  point_loss.py  regression.py  vggt_omega_loss.py
vggt_omega/models/: aggregator.py  vggt_omega.py
vggt_omega/training/: collate.py  losses.py  optim.py  profile_step.py  sweep_capacity.py  trainer.py
vggt_omega/utils/: geometry.py  logger.py
(+69 files in other folders)
